k8s/base/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingressx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host:     a28bf463360d941ec978a961c4bc737c-1299177444.us-east-1.elb.amazonaws.com  #  load balancer url 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

                  

# adding below annotation solved the problem for me

# alb.ingress.kubernetes.io/target-type: ip
# full ingress looks like this

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /*
#             pathType: Prefix
#             backend:
#               service:
#                 name: my-service
#                 port:
#                   number: 80
